Add proxy ordering feature with ProxyCheap integration
- Created OrderProxies component with plans for residential, datacenter, and mobile proxies
- Added proxy_orders table migration to Supabase dev database
- Updated Sidebar to include Order Proxies tab
- Updated Index.tsx to render OrderProxies component
- Added ProxyCheap API keys to environment variables
- Integrated proxy ordering with user balance system

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 # BuyUpvotes API Configuration
 VITE_BUYUPVOTES_API_KEY=4bae4b37c0b7b8b0aa396e268095ea9ac5f6471c
+
+# ProxyCheap API Keys
+VITE_PROXYCHEAP_API_KEY_1=019c30d8-1fe3-7e0f-b038-5abe0f20f665
+VITE_PROXYCHEAP_API_KEY_2=019c30d8-1fe3-7e0f-b038-5abe0f53328d
